src/App.scss
$fontHead: 'Lexend Exa', sans-serif;
$fontText: 'Roboto Mono', monospace;
$bgColor: #1b191f;
$lightgrey: #c4c4c4;
$grey: #a8a8a8;
$accent1: #b384ff;
$accent2: #873eff;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.App {
  background: $bgColor;
  color: white;
  font-family: $fontHead;
  width: 100%;
  overflow-x: hidden;
}

a {
  text-decoration: none;
  color: white;
  cursor: pointer;
}

section {
  width: 100%;
  min-height: 100vh;
  padding: 0rem 4rem;

  h1 {
    font-size: 4rem;
    font-weight: normal;
    text-transform: lowercase;

    &::after {
      content: ':';
    }
  }
}

nav {
  width: 100%;
  position: fixed;
  top: 20px;
  z-index: 5;

  ul {
    display: flex;
    justify-content: flex-end;
    list-style: none;
    font-size: 1.2rem;

    li {
      position: relative;
      padding: 0.8rem 1rem;
      margin: 0 1rem;
      text-transform: lowercase;
      cursor: pointer;

      &::after {
        content: '';
        position: absolute;
        width: 100%;
        height: 0.175rem;
        background-color: white;
        left: 0;
        bottom: 45%;

        transform-origin: 0% 100%;
        transform: scale(0, 1);
        transition: transform 0.3s ease;
      }

      &:hover::after {
        transform: scale(1, 1);
      }
    }
  }
}

#home {
  display: flex;
  align-items: center;

  h1 {
    margin-top: -4rem;
    font-size: 8rem;
    font-weight: normal;
    text-transform: none;

    &::after {
      content: '';
    }
  }

  .info {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;

    .socmed {
      svg {
        margin: 0 2rem;
        fill: none;
        color: $accent1;
        height: max-content;
      }

      display: flex;
      align-items: center;

      .buttons {
        justify-content: space-around;
        width: fit-content;
        svg {
          fill: $lightgrey;
          width: 50px;
          cursor: pointer;
          margin: 0 1rem;
          transition: fill ease 0.3s;
        }

        svg:hover {
          fill: $accent2;
        }
      }

      ul {
        list-style: none;

        li {
          cursor: pointer;
          font-size: 1.2rem;
          padding: 0.2rem;
        }
      }
    }
  }

  h2 {
    font-family: $fontText;
    font-weight: normal;
    font-size: 1.2rem;
    color: $grey;
    white-space: pre-wrap;
    line-height: 1.8rem;

    &::before {
      content: '/*\a';
    }

    &::after {
      content: '\a*/';
    }
  }
}

#about {
  position: relative;

  h2 {
    text-transform: lowercase;
    font-size: 3rem;
    font-weight: normal;
  }

  p {
    position: relative;
    color: $grey;
    font-size: 1.2rem;
    font-family: 'Roboto Mono', monospace;
    width: 50%;
    margin-top: 1.2rem;
    margin-left: 1.3rem;
    padding: 1.2rem 2rem;
    border-left: 4px solid $lightgrey;
    z-index: 3;
  }

  .skills {
    display: flex;
    justify-items: flex-end;
    position: absolute;
    right: 4rem;
    width: fit-content;
    overflow: hidden;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;

    .skills-content {
      padding: 1rem 2rem;

      h2 {
        font-size: 2.5rem;
      }

      ul {
        font-family: $fontText;
        color: $grey;
        list-style: none;

        li {
          margin: 2rem 0rem;
        }
      }
    }

    &::after {
      content: url(./svg/skills-deco.svg);
      width: 8vw;
      margin-left: 1rem;
      margin-right: 2rem;
    }
  }

  .artwork {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    margin: 8rem 2rem;
    margin-bottom: 4rem;

    width: 400px;
    height: 400px;
    border: 1px solid $lightgrey;
    border-radius: 400px;

    a {
      position: relative;
      text-align: center;
      text-transform: lowercase;
      z-index: 2;
      width: 50%;
      font-size: 2.5rem;
    }

    .slideshow {
      display: none;
      position: absolute;
      left: 50%;
      bottom: 50%;
      z-index: 1;
      width: 400px;
      height: 400px;
      background-color: $grey;
      border: 80px solid $bgColor;
      overflow: hidden;

      img {
        object-fit: contain;
        width: 100%;
      }
    }

    &::after {
      content: url(./svg/eye.svg);
      opacity: 20%;
      width: 70%;
      position: absolute;
      z-index: 0;
    }

    &:hover {
      .slideshow {
        display: block;
      }
    }
  }
}

#works {
  .work-card {
    display: flex;
    align-items: center;
    justify-content: center;

    padding: 2rem 4rem;

    &:nth-child(odd) {
      flex-direction: row-reverse;
    }

    .work-text {
      width: 50%;

      h2 {
        text-transform: lowercase;
        font-size: 2.5rem;
        margin-bottom: 1rem;
      }

      p {
        font-size: 1.5rem;
        font-family: $fontText;
        color: $grey;
        margin-left: 4rem;
        margin-bottom: 1rem;
      }

      .techstack {
        font-size: 1.2rem;
        font-weight: bold;
      }
    }

    .cta-wrapper {
      width: 60vw;
      position: relative;
      cursor: pointer;

      .cta {
        opacity: 0;
        position: absolute;
        width: 200px;
        height: 200px;
        left: -10%;
        bottom: -60%;
        z-index: 1;
        transform: scale(0.8) skewX(-40deg);
        transition: opacity 0.3s ease;

        text {
          font-size: 60px;
          font-family: $fontHead;
          text-transform: uppercase;
          letter-spacing: 20px;
          fill: white;
        }
      }

      &:hover {
        .cta {
          opacity: 1;
        }
      }

      .img-container {
        height: 10vw;
        margin: 0 2rem;
        background-color: $accent1;
        overflow: hidden;
        position: relative;

        img {
          width: 100%;
          bottom: -50%;
          position: absolute;
        }
      }
    }

    &:nth-child(odd) {
      .cta-wrapper {
        .cta {
          left: auto;
          right: -10%;
          transform: scale(0.8) skewX(40deg);
        }
      }
    }
  }
}

#contact {
  display: flex;
  flex-direction: column;
  justify-content: center;

  a {
    margin: 2rem 0rem;
    text-transform: none;
    font-size: 6rem;

    position: relative;

    &::after {
      content: '';
      width: 100%;
      height: 4px;
      background-color: $accent2;
      position: absolute;
      left: 0;
      bottom: -10%;
      transform: scale(0, 1);

      transform-origin: 0% 100%;
      transition: transform 0.3s ease;
    }

    &:hover::after {
      transform: scale(1, 1);
    }
  }

  p {
    font-size: 3.5rem;
    width: 80%;
  }

  .emphasis:nth-child(odd) {
    color: $accent1;
  }
  .emphasis:nth-child(even) {
    color: $accent2;
  }
}

@media screen and (max-width: 768px) {
  section {
    padding: 0 2rem;

    h1 {
      font-size: 3rem;
    }
  }

  nav {
    ul {
      justify-content: center;
      font-size: 1rem;
      li {
        margin: 0;
      }
    }
  }

  #home {
    h1 {
      font-size: 5rem;
    }

    h2 {
      font-size: 1rem;
    }

    .info {
      display: block;

      .socmed {
        svg {
          margin-left: 0;
        }

        .buttons {
          svg {
            width: 40px;
          }
        }
      }
    }
  }

  #about {
    display: flex;
    flex-direction: column;
    justify-content: center;

    p {
      font-size: 1rem;
      width: 100%;
    }
    .skills {
      margin: 2rem 0;
      position: static;

      .skills-content {
        h2 {
          font-size: 2rem;
        }

        ul {
          font-size: 1rem;
        }
      }

      &::after {
        width: 30vw;
      }
    }

    .artwork {
      display: flex;
      align-items: center;
      justify-content: center;
      width: 300px;
      height: 300px;
      margin: 0;
      margin-bottom: 2rem;

      a {
        font-size: 2rem;
        text-align: center;
      }

      .slideshow {
        position: fixed;
        left: 0;
        top: -500px;
        display: none;
      }
    }
  }

  #works {
    .work-card {
      flex-direction: column-reverse;
      padding: 0;

      &:nth-child(odd) {
        flex-direction: column-reverse;
      }

      .work-text {
        width: 100%;

        h2 {
          font-size: 1.8rem;
        }

        p {
          width: 100%;
          font-size: 1rem;
          margin-left: 2rem;
        }

        .techstack {
          font-size: 0.8rem;
        }
      }

      .cta-wrapper {
        .img-container {
          width: 100%;
          height: 20vw;
          bottom: 0%;
          margin: 1rem 0;
        }
      }
    }
  }

  #contact {
    p {
      font-size: 2rem;
      width: 100%;
    }

    a {
      font-size: 3.5rem;
    }
  }
}

